<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.fragments.PlayFragment">

    <data>
        <import type="android.view.View" />
        <variable name="viewmodel" type="shereen.game.tictactoe.viewmodel.StatusViewModel"/>
        <variable name="gamemodel" type="shereen.game.tictactoe.viewmodel.GameViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:gravity="center_horizontal" android:id="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menuLayout"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/rounded_corner"
                android:layout_weight="0.5"
                android:gravity="center">


            <TextView android:layout_width="wrap_content"
                      android:id="@+id/currentPlayer"
                      android:textColor="@{viewmodel.isFirstPlayer? @color/greeny : @color/bluey}"
                      android:text="@{viewmodel.isFirstPlayer? viewmodel.playerA : viewmodel.playerB}"
                      android:textStyle="bold"
                      android:textSize="24sp"
                      android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:layout_marginStart="8dp"
                      android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                      app:layout_constraintEnd_toStartOf="@+id/imageButton2"/>

            <ImageButton
                    android:src="@drawable/grid_pressed"
                    android:layout_width="30dp"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:layout_height="30dp"
                    android:onClick="@{() -> gamemodel.clearGameBoard()}"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/imageButton"
                    android:id="@+id/imageButton2"/>

            <ImageButton
                    android:src="@drawable/settings_pressed"
                    android:layout_width="30dp"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:layout_height="30dp"
                    android:onClick="@{() -> viewmodel.setDialogShown()}" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout android:layout_width="match_parent"
                    android:layout_below="@id/menuLayout"
                    android:animateLayoutChanges="true"
                    android:id="@+id/gridLayout"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:background="@color/off_white"
                    android:columnCount="3">

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[0]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(0)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[0]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[0]}"

                        style="@style/gridButton"/>

            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[1]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(1)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[1]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[1]}"
                        style="@style/gridButton"/>
            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[2]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(2)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[2]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[2]}"
                        style="@style/gridButton"/>


            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[3]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(3)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[3]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[3]}"
                        style="@style/gridButton"/>

            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView
                        app:imageResource="@{gamemodel.game.boardView.imageShown[4]}"
                        style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(4)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[4]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[4]}"
                        style="@style/gridButton"/>

            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[5]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(5)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[5]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[5]}"
                        style="@style/gridButton"/>

            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[6]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(6)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[6]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[6]}"
                        style="@style/gridButton"/>

            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[7]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(7)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[7]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[7]}"
                        style="@style/gridButton"/>

            </RelativeLayout>

            <RelativeLayout style="@style/gridRelative">

                <ImageView app:imageResource="@{gamemodel.game.boardView.imageShown[8]}"
                           style="@style/gridImage"/>

                <Button android:onClick="@{() -> gamemodel.playTurn(8)}"
                        android:visibility="@{gamemodel.game.boardView.buttonVis[8]}"
                        android:enabled="@{gamemodel.game.boardView.buttonEnabled[8]}"
                        style="@style/gridButton"/>

            </RelativeLayout>

        </GridLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_below="@id/gridLayout"
                      android:layout_marginStart="8dp"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/levelLayout"
                      android:gravity="bottom"
                      android:layout_height="0dp"
                      android:layout_weight="1"
                      android:orientation="horizontal">

            <Button android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> gamemodel.changeLevel(1)}"
                    android:enabled="@{gamemodel.game.level == 1? false : true}"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/easy"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"/>

            <Button android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> gamemodel.changeLevel(2)}"
                    android:enabled="@{gamemodel.game.level == 2? false : true}"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/medium"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"/>

            <Button android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> gamemodel.changeLevel(3)}"
                    android:enabled="@{gamemodel.game.level == 3? false : true}"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/hard"
                    android:layout_height="wrap_content"
                    android:text="@string/hard"/>


        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/scoreLayout"
                android:layout_below="@id/levelLayout"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="0dp"
                android:layout_weight="1.5">

            <LinearLayout android:layout_width="0dp"
                          android:layout_weight="1"
                          android:background="@drawable/rounded_corner"
                          android:gravity="center_horizontal"
                          android:orientation="vertical"
                          android:padding="1dp"
                          android:layout_marginEnd="4dp"
                          android:layout_height="wrap_content">

                <TextView android:layout_width="match_parent"
                          android:textStyle="bold"
                          android:textColor="@color/p3_grass"
                          android:gravity="center"
                          android:layout_height="wrap_content"
                          android:text="@{viewmodel.playerA}"/>

                <TextView android:layout_width="match_parent"
                          android:background="@drawable/rounded_corner_white"
                          android:layout_height="wrap_content"
                          android:textColor="@color/black"
                          android:layout_marginStart="2dp"
                          android:layout_marginEnd="2dp"
                          android:gravity="center"
                          android:textSize="32sp"
                          android:layout_marginTop="4dp"
                          android:paddingTop="8dp"
                          android:paddingBottom="8dp"
                          android:layout_marginBottom="4dp"
                          android:text="@{viewmodel.playerScore1}"/>
            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                          android:layout_weight="1"
                          android:background="@drawable/rounded_corner"
                          android:gravity="center_horizontal"
                          android:orientation="vertical"
                          android:padding="1dp"
                          android:layout_marginStart="4dp"
                          android:layout_height="wrap_content">

                <TextView android:layout_width="match_parent"
                          android:gravity="center"
                          android:textColor="@color/sky_blue"
                          android:textStyle="bold"
                          android:layout_height="wrap_content"
                          android:text="@{viewmodel.playerB}"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="4dp"
                          android:layout_marginBottom="4dp"
                          android:textColor="@color/black"
                          android:paddingTop="8dp"
                          android:paddingBottom="8dp"
                          android:layout_marginStart="2dp"
                          android:layout_marginEnd="2dp"
                          android:background="@drawable/rounded_corner_white"
                          android:gravity="center"
                          android:textSize="32sp"
                          android:text="@{viewmodel.playerScore2}"/>
            </LinearLayout>

        </LinearLayout>

        <TextView android:layout_width="match_parent"
                  android:textColor="@color/cream"
                  android:text="@{viewmodel.gameMode}"
                  android:gravity="center"
                  android:background="@color/dark_gray"
                  android:layout_alignParentBottom="true"
                  android:layout_height="0dp"
                  android:layout_weight="0.3"/>

    </LinearLayout>

</layout>
